VSE - Input Color option does not work for video files #36124

Closed
opened 2013-07-12 23:46:37 +02:00 by Juan Pablo Bouza · 6 comments

%%%Ubuntu 64 here, r58187.

The input color space option for individual strips doesn't do anything if the strip is a video file. With image sequences it works well, but not with video files. It just has no effect at all.

%%%

%%%Ubuntu 64 here, r58187. The input color space option for individual strips doesn't do anything if the strip is a video file. With image sequences it works well, but not with video files. It just has no effect at all. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev58257. Thanks for the report, closing.%%%

%%%Fixed in svn rev58257. Thanks for the report, closing.%%%
Author
Member

%%%Not closed!!! :)

Now it all works fine in the viewport, but when you render, it goes back to the error. I tried it with an image and rendering works well, so I guess you missed to modify the rendering flag for videos in this issue??%%%

%%%Not closed!!! :) Now it all works fine in the viewport, but when you render, it goes back to the error. I tried it with an image and rendering works well, so I guess you missed to modify the rendering flag for videos in this issue??%%%

%%%Indeed. But unfortunately, issue goes deeper to how sequencer currently handles the images.

The thing is, for until image buffers stays stored in byte, they're assumed to be in a sequencer's working space. Which means input color space is actually ignoring for them. And the bug here is that sequencer preview is not actually aware of this.

But once image buffer is converted to float (using Convert Float option, or mixing it with another float image) that settings will get into account.

And the thing here is, even to make it so preview behaves same as final render, it'll imply quite a lot of changes which are not safe for the evening of release.

This is rather old issue, and leaving it for after current release.%%%

%%%Indeed. But unfortunately, issue goes deeper to how sequencer currently handles the images. The thing is, for until image buffers stays stored in byte, they're assumed to be in a sequencer's working space. Which means input color space is actually ignoring for them. And the bug here is that sequencer preview is not actually aware of this. But once image buffer is converted to float (using Convert Float option, or mixing it with another float image) that settings will get into account. And the thing here is, even to make it so preview behaves same as final render, it'll imply quite a lot of changes which are not safe for the evening of release. This is rather old issue, and leaving it for after current release.%%%

%%%Fixed in svn rev59734. Please give it an intense testing to see if color spaces in sequencer now behaves reliable.%%%

%%%Fixed in svn rev59734. Please give it an intense testing to see if color spaces in sequencer now behaves reliable.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36124
No description provided.